--- a/apps/tasque/analysis_options.yaml
+++ b/apps/tasque/analysis_options.yaml
@@ -1,1 +1,10 @@
-include: package:flutter_lints/flutter.yaml
+include: package:very_good_analysis/analysis_options.yaml
+
+analyzer:
+  errors:
+    public_member_api_docs: ignore
+    always_use_package_imports: ignore
+
+linter:
+  rules:
+    prefer_relative_imports: true
