--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -7,12 +7,19 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  flex_color_scheme: ^8.1.1
   flutter:
     sdk: flutter
+  form_builder_validators: ^11.1.2
+  go_router: ^14.8.1
+  intl: ^0.19.0
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  build_verify: ^3.1.0
   flutter_test:
     sdk: flutter
+  go_router_builder: ^2.8.2
   very_good_analysis: ^7.0.0
 
 flutter:
