--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   form_builder_validators: ^11.1.2
   go_router: ^14.8.1
   intl: ^0.19.0
+  objectbox: ^4.1.0
+  objectbox_flutter_libs: ^4.1.0
 
 dev_dependencies:
   build_runner: ^2.4.15
@@ -20,6 +22,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   go_router_builder: ^2.8.2
+  objectbox_generator: ^4.1.0
   very_good_analysis: ^7.0.0
 
 flutter:
