--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -7,23 +7,34 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  collection: ^1.19.1
   flex_color_scheme: ^8.1.1
   flutter:
     sdk: flutter
-  form_builder_validators: ^11.1.2
+  flutter_bloc: ^9.1.0
+  form_builder_validators: ^11.1.2 # TODO: needed?
+  freezed_annotation: ^3.0.0
   go_router: ^14.8.1
   intl: ^0.19.0
+  json_annotation: ^4.9.0
   objectbox: ^4.1.0
   objectbox_flutter_libs: ^4.1.0
+  path: ^1.9.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   build_runner: ^2.4.15
   build_verify: ^3.1.0
   flutter_test:
     sdk: flutter
+  freezed: ^3.0.4
   go_router_builder: ^2.8.2
+  json_serializable: ^6.9.0
   objectbox_generator: ^4.1.0
   very_good_analysis: ^7.0.0
+
+dependency_overrides:
+  source_gen: ^1.5.0
 
 flutter:
   uses-material-design: true
