--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   collection: ^1.19.1
+  firebase_core: ^3.12.1
   flex_color_scheme: ^8.1.1
   flutter:
     sdk: flutter
