--- a/apps/tasque/analysis_options.yaml
+++ b/apps/tasque/analysis_options.yaml
@@ -5,6 +5,7 @@ analyzer:
     public_member_api_docs: ignore
     always_use_package_imports: ignore
     use_late_for_private_fields_and_variables: ignore
+    avoid_catches_without_on_clauses: ignore
 
 linter:
   rules:
