--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   collection: ^1.19.1
+  firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
   flex_color_scheme: ^8.1.1
   flutter:
@@ -16,8 +17,10 @@ dependencies:
   form_builder_validators: ^11.1.2 # TODO: needed?
   freezed_annotation: ^3.0.0
   go_router: ^14.8.1
+  google_sign_in: ^6.3.0
   intl: ^0.19.0
   json_annotation: ^4.9.0
+  lottie: ^3.3.1
   objectbox: ^4.1.0
   objectbox_flutter_libs: ^4.1.0
   path: ^1.9.1
@@ -39,3 +42,5 @@ dependency_overrides:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/lottie/
