--- a/apps/tasque/analysis_options.yaml
+++ b/apps/tasque/analysis_options.yaml
@@ -6,6 +6,7 @@ analyzer:
     always_use_package_imports: ignore
     use_late_for_private_fields_and_variables: ignore
     avoid_catches_without_on_clauses: ignore
+    invalid_annotation_target: ignore
 
 linter:
   rules:
