--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  cloud_firestore: ^5.6.5
   collection: ^1.19.1
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
@@ -25,6 +26,7 @@ dependencies:
   objectbox_flutter_libs: ^4.1.0
   path: ^1.9.1
   path_provider: ^2.1.5
+  uuid: ^4.5.1
 
 dev_dependencies:
   build_runner: ^2.4.15
