--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   cloud_firestore: ^5.6.5
   collection: ^1.19.1
+  connectivity_plus: ^6.1.3
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
   flex_color_scheme: ^8.1.1
