--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path: ^1.9.1
   path_provider: ^2.1.5
   uuid: ^4.5.1
+  wave: ^0.2.2
 
 dev_dependencies:
   build_runner: ^2.4.15
