--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.15
   build_verify: ^3.1.0
+  flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.5
   flutter_test:
     sdk: flutter
