--- a/apps/tasque/android/app/src/main/AndroidManifest.xml
+++ b/apps/tasque/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" /> 
     <application
-        android:label="tasque"
+        android:label="Tasque"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
