--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_local_notifications: ^19.0.0
   form_builder_validators: ^11.1.2 # TODO: needed?
   freezed_annotation: ^3.0.0
   go_router: ^14.8.1
@@ -27,6 +28,7 @@ dependencies:
   objectbox_flutter_libs: ^4.1.0
   path: ^1.9.1
   path_provider: ^2.1.5
+  timezone: ^0.10.0
   uuid: ^4.5.1
   wave: ^0.2.2
 
