--- a/apps/tasque/pubspec.yaml
+++ b/apps/tasque/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   objectbox_flutter_libs: ^4.1.0
   path: ^1.9.1
   path_provider: ^2.1.5
+  shared_preferences: ^2.5.2
   timezone: ^0.10.0
   uuid: ^4.5.1
   wave: ^0.2.2
